--- a/src/HtmlTemplates/billing.html
+++ b/src/HtmlTemplates/billing.html
@@ -45,8 +45,8 @@ tr:nth-child(even) {
 
 <div class="card">
   <div class="container">
-    <h4 class="removeMargin"><b>Invoice Of March 2021</b></h4> 
-    <h5 class="removeMargin"><b>25 Jan 2021</b></h5> 
+    <h4 class="removeMargin"><b>Invoice Of {{month}}</b></h4> 
+    <h5 class="removeMargin"><b>{{billingDate}}</b></h5> 
     <table>
         <tr>
           <td>Total Hours</td>
